<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleSize"
        android:elevation="4dp"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/security_key_type"
                android:textColor="@color/colorTextHelp"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/key_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_kek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:checked="true"
                    android:text="@string/security_kek"
                    android:textColor="@color/colorTextContent"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_tmk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/security_tmk"
                    android:textColor="@color/colorTextContent"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_pik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/security_pik"
                    android:textColor="@color/colorTextContent"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_tdk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/security_tdk"
                    android:textColor="@color/colorTextContent"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_mak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/security_mak"
                    android:textColor="@color/colorTextContent"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_rec_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/security_rec_key"
                    android:textColor="@color/colorTextContent"
                    android:textSize="14sp" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/target_pkg_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/target_pkg_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/security_target_pkg_name"
                    android:textColor="@color/colorTextContent"
                    android:textColorHint="@color/colorTextHelp"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="32">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/key_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/security_key_value"
                    android:textColor="@color/colorTextContent"
                    android:textColorHint="@color/colorTextHelp"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="32">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/check_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/security_check_value"
                    android:textColor="@color/colorTextContent"
                    android:textColorHint="@color/colorTextHelp"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/security_key_alg_type"
                android:textColor="@color/colorTextHelp"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/key_alg_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_3des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:checked="true"
                    android:text="@string/security_alg_3des_or_des"
                    android:textColor="@color/colorTextContent"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_sm4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/security_alg_sm4"
                    android:textColor="@color/colorTextContent"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_aes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/security_alg_aes"
                    android:textColor="@color/colorTextContent"
                    android:textSize="14sp" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/key_index"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/security_key_index"
                    android:inputType="number"
                    android:textColor="@color/colorTextContent"
                    android:textColorHint="@color/colorTextHelp"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_ok"
                android:layout_width="match_parent"
                android:layout_height="@dimen/titleSize"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:elevation="8dp"
                android:gravity="center"
                android:text="@string/ok"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/colorOrange"
                app:cornerRadius="8dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>